# ai-bestie

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  requirements.txt  run_telegram_bot.py  vee_ir.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
graph/: build_graph.py  edges.py  nodes.py  state.py  vee_ir.py
layers/act/: __init__.py
layers/perceive/: __init__.py
layers/plan/: __init__.py
layers/reflect/: __init__.py
llms/: assistant_drafter.py  drafter.py  expertise_router.py  info_seeker.py  informer.py  llm_factory.py  mode_decider.py  omni_responder.py  planner.py  reviewer.py  safety.py  sensing.py  summarizer.py
models/: acting.py  bestie.py  info_seeker.py  perception.py  planning.py  vee_ir.py
nginx/: local.conf  prod.conf
prompts/: assistant_drafter_prompt.py  assistant_planner_prompt.py  detect_emotion_prompt.py  expertise_router_prompt.py  generate_content_seed_prompt.py  greeting_patterns.py  info_seeker_prompts.py  mode_decider_prompt.py  modulate_response_prompt.py  omni_responder_prompt.py  select_strategy_prompt.py
prompts/bestie/: drafter_prompt.md  planner_prompt.md
prompts/vee_ir/: classifier_prompt.md  knowledge_generator_prompt.md  planner_prompt.md  unified_goal_extractor_prompt.md
ui/telegram/: app.py  client.py  config.py  handler.py  session.py
utils/: acting_chains.py  formatter.py  perception_chains.py  planning_chains.py
